<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/emergencyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/emergency_toolkit"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/policeButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_large"

        android:text="@string/police"

        app:layout_constraintTop_toBottomOf="@id/emergencyTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/ambulanceButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:text="@string/ambulance"

        app:layout_constraintTop_toBottomOf="@id/policeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/fireButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:text="@string/fire"

        app:layout_constraintTop_toBottomOf="@id/ambulanceButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/womenButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:text="@string/women_helpline"

        app:layout_constraintTop_toBottomOf="@id/fireButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/childButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:text="@string/child_helpline"

        app:layout_constraintTop_toBottomOf="@id/womenButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/cyberCrimeButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:text="@string/cyber_crime"

        app:layout_constraintTop_toBottomOf="@id/childButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>