<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium">

        <TextView
            android:id="@+id/safetyTimerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safety_timer_title"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/timerDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/timer_description"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_body"
            app:layout_constraintTop_toBottomOf="@id/safetyTimerTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/timerStatusText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/timer_not_running"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_heading"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/timerDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/demoTimerButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/emergency_button_height"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/demo_timer"
            app:layout_constraintTop_toBottomOf="@id/timerStatusText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/fiveMinuteButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/emergency_button_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/timer_5_min"
            app:layout_constraintTop_toBottomOf="@id/demoTimerButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/tenMinuteButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/emergency_button_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/timer_10_min"
            app:layout_constraintTop_toBottomOf="@id/fiveMinuteButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/thirtyMinuteButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/emergency_button_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/timer_30_min"
            app:layout_constraintTop_toBottomOf="@id/tenMinuteButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/customTimerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/custom_timer"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_heading"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/thirtyMinuteButton"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/customTimerInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/custom_timer_hint"
            android:inputType="number"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"
            android:backgroundTint="@color/guardian_primary"
            app:layout_constraintTop_toBottomOf="@id/customTimerLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/startCustomTimerButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/emergency_button_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/start_custom_timer"
            app:layout_constraintTop_toBottomOf="@id/customTimerInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancelTimerButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/emergency_button_height"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/cancel_timer"
            app:layout_constraintTop_toBottomOf="@id/startCustomTimerButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>