<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/settings_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_large"

        android:text="@string/alert_history"

        app:layout_constraintTop_toBottomOf="@id/settingsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/safetyTimerButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:text="@string/safety_timer"

        app:layout_constraintTop_toBottomOf="@id/historyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/batterySettingsButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:text="@string/battery_settings"

        app:layout_constraintTop_toBottomOf="@id/safetyTimerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>