<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/locationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/nearby_emergency_locations"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/locationPoliceButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_large"

        android:text="@string/nearby_police"

        app:layout_constraintTop_toBottomOf="@id/locationTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/locationFireButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:text="@string/nearby_fire"

        app:layout_constraintTop_toBottomOf="@id/locationPoliceButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/locationHospitalButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/emergency_button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:text="@string/nearby_hospital"

        app:layout_constraintTop_toBottomOf="@id/locationFireButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>