<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/contactsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/emergency_contacts"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/contactNameInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_large"

        android:hint="@string/contact_name"
        android:inputType="textPersonName"
        android:padding="@dimen/padding_medium"

        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:backgroundTint="@color/guardian_primary"

        app:layout_constraintTop_toBottomOf="@id/contactsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/contactPhoneInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:hint="@string/contact_phone"
        android:inputType="phone"
        android:padding="@dimen/padding_medium"

        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:backgroundTint="@color/guardian_primary"

        app:layout_constraintTop_toBottomOf="@id/contactNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/saveContactButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_medium"

        android:text="@string/save_contact"

        app:layout_constraintTop_toBottomOf="@id/contactPhoneInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/savedContactsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"

        android:text="@string/saved_contacts"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/saveContactButton"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/savedContactsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@id/savedContactsTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>