<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="@dimen/padding_medium">

        <TextView
            android:id="@+id/statusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/guardian_status"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_heading"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/deviceStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin_small"

            android:text="@string/disconnected"
            android:textColor="@color/guardian_error"
            android:textSize="@dimen/text_body"

            app:layout_constraintTop_toBottomOf="@id/statusTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/batteryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/battery"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_caption"

            app:layout_constraintTop_toTopOf="@id/statusTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/batteryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin_small"

            android:text="@string/battery_unknown"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_heading"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/batteryLabel"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>