<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/historyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/alert_history"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/clearHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"

        android:text="@string/clear_history"

        app:layout_constraintTop_toTopOf="@id/historyTitle"
        app:layout_constraintBottom_toBottomOf="@id/historyTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/historyText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_large"

        android:text="@string/no_alert_history"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_body"

        app:layout_constraintTop_toBottomOf="@id/historyTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>